project/microservice/k8s/auth/service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: microservices-dev
spec:
  selector:
    app: auth
  ports:
    - port: 8001
      targetPort: 8001
  type: ClusterIP
